--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
   "author": "Wasuwat Limsuparhat <wasuwat.se@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "preact": "^8.4.2",
+    "preact-compat": "^3.18.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-0",
-    "@babel/preset-react": "^7.0.0",
     "gh-pages": "^2.0.1",
     "parcel-bundler": "^1.10.3"
   },
