--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.11.0"
   },
   "scripts": {
-    "dev": "parcel ./src/index.html",
+    "dev": "parcel ./src/index.html --open",
+    "bd": "yarn build && yarn deploy",
     "deploy": "gh-pages -d public -m 'autodeploy [ci skip]'",
-    "build": "parcel build ./src/index.html --out-dir ./public --detailed-report --no-source-maps"
+    "build": "parcel build ./src/index.html --public-url ./ --out-dir ./public --log-level 0 --detailed-report --no-source-maps"
   }
 }
